/*
Copyright 2022 Google LLC

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    https://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";

package cloud.partners.sap.system;

import "google/protobuf/timestamp.proto";



// The schema of SAP system discovery data.
message SapDiscovery {
  // The metadata for SAP system discovery data.
  Metadata metadata = 1;

  // An SAP System must have a database.
  Component database_layer = 2;

  // An SAP system may run without an application layer.
  Component application_layer = 3;

  // A combination of database SID, database instance URI and tenant DB name
  // to make a unique identifier per-system.
  string system_id = 4;

  // Unix timestamp this system has been updated last.
  google.protobuf.Timestamp update_time = 5;

  // Message describing SAP discovery system metadata
  message Metadata {
    // Customer defined, something like "E-commerce pre prod"
    string defined_system = 1;

    // This sap product name
    string sap_product = 2;

    // Should be "prod", "QA", "dev", "staging", etc.
    string environment_type = 3;

    // Customer region string for customer's use. Does not represent GCP region.
    string customer_region = 4;
  }

  // Message describing a resource.
  message Resource {
    // Different types of resources attached to the SAP system.
    enum ResourceType {
      // Undefined resource type.
      RESOURCE_TYPE_UNSPECIFIED = 0;
      // This is a compute resource.
      COMPUTE = 1;
      // This a storage resource.
      STORAGE = 2;
      // This is a network resource.
      NETWORK = 3;
    }
    // The type of this resource.
    ResourceType resource_type = 1;

    // ComputeInstance, ComputeDisk, VPC, Bare Metal server, etc.
    string resource_kind = 2;

    // URI of the resource, includes project, location, and name.
    string resource_uri = 3;

    // A list of resource URIs related to this resource.
    repeated string related_resources = 4;

    // Unix timestamp of when this resource last had its discovery data updated.
    google.protobuf.Timestamp update_time = 5;

    // State of the resource in the current discovery phase.
    enum ResourceState {
      // Undefined resource state
      RESOURCE_STATE_UNSPECIFIED = 0;
      // Resource was added this cycle
      ADDED = 1;
      // Resource already discovered, just updated this cycle
      UPDATED = 2;
      // Resource already discovered, but has been explicitly removed this cycle
      REMOVED = 3;
      // Resource already discovered, but has been replaced by a new resource
      // this cycle
      REPLACED = 4;
      // Resource already discovered, but is missing or unresponsive this cycle
      MISSING = 5;
    }

    // Indicates whether this is a new, updated, or missing resource.
    ResourceState resource_state = 6;
  }
  // Message describing the system component.
  message Component {
    // The resources in a component.
    repeated Resource resources = 1;
    oneof type {
      // The component is a SAP application.
      string application_type = 2;
      // The component is a SAP database.
      string database_type = 3;
    }
    // Pantheon Project in which the resources reside.
    string host_project = 4;
    // The sap identifier,
    // used by the SAP software and helps differentiate systems for customers.
    string sid = 5;
  }
}
